--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marina Kisseljova - Portfolio</title>
-    <link rel="stylesheet" href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\css\style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
-    <script src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\jscripts\script.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
