--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             </p>
 	
             <div class="about-buttons">
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\MarinaKisseljova_CV.pdf" class="button" target="_blank">Download CV</a>
+                <a href="MarinaKisseljova_CV.pdf" class="button" target="_blank">Download CV</a>
                 <a href="#contact" class="button">Contact Me</a>
             </div>
         </div>
         <div class="about-photo">
-            <img src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\images\me.png" alt="Marina Kisseljova" class="profile-photo">
+            <img src="me.png" alt="Marina Kisseljova" class="profile-photo">
         </div>
     </div>
 </section>
@@ -237,13 +237,13 @@
             <div class="certificate-card">
                 <i class="fas fa-award"></i>
                 <h4>Bachelor of Science in Software Design</h4>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\1.2.pdf" download>
+                <a href="1.2.pdf" download>
                     <i class="fas fa-download"></i> Download
                 </a>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\2.2.pdf" download>
+                <a href="2.2.pdf" download>
                     <i class="fas fa-download"></i> Download
                 </a>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\3.3.pdf" download>
+                <a href="3.3.pdf" download>
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
@@ -251,7 +251,7 @@
             <div class="certificate-card">
                 <i class="fas fa-award"></i>
                 <h4>Software Development Certificate</h4>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\June2021.jpg" download>
+                <a href="June2021.jpg" download>
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
@@ -259,7 +259,7 @@
             <div class="certificate-card">
                 <i class="fas fa-award"></i>
                 <h4>Internet Certificate</h4>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\Internet.jpg" download>
+                <a href="Internet.jpg" download>
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
@@ -267,7 +267,7 @@
             <div class="certificate-card">
                 <i class="fas fa-award"></i>
                 <h4>Web Authoring Certificate</h4>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\Web.jpg" download>
+                <a href="Web.jpg" download>
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
@@ -275,7 +275,7 @@
             <div class="certificate-card">
                 <i class="fas fa-award"></i>
                 <h4>Supervisory Management Certificate</h4>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\SupervisoryManagement.jpg" download>
+                <a href="SupervisoryManagement.jpg" download>
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
@@ -283,7 +283,7 @@
             <div class="certificate-card">
                 <i class="fas fa-vr-cardboard"></i>
                 <h4>First Aid Response Certificate</h4>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\FirstAidResponse.jpg" download>
+                <a href="FirstAidResponse.jpg" download>
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
@@ -291,7 +291,7 @@
             <div class="certificate-card">
                 <i class="fas fa-award"></i>
                 <h4>Typing Skills Certificate</h4>
-                <a href="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\docs\TypingCertificate.pdf" download>
+                <a href="TypingCertificate.pdf" download>
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
@@ -299,7 +299,7 @@
             <div class="certificate-card">
                 <i class="fas fa-award"></i>
                 <h4>Personality Type Assessment</h4>
-                <a href="C:/Users/MK/Documents/GitHub/IndividualDigitalPortfolio/docs/PersonalityType.pdf" download>
+                <a href="PersonalityType.pdf" download>
                     <i class="fas fa-download"></i> Download
                 </a>
             </div>
@@ -337,7 +337,7 @@
         <section id="projects" class="section">
             <div class="projects-gallery">
                 <div class="project-card">
-                    <img src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\images\ClubCard.jpg" alt="AR Project" />
+                    <img src="ClubCard.jpg" alt="AR Project" />
                     <h4>Augmented Reality Project</h4>
                     <p>Developed an AR application using Unity and Vuforia SDK with QR code recognition.</p>
                 </div>
@@ -346,13 +346,13 @@
                     <h4>2D & 3D Game Development</h4>
                     <div class="project-media">
                         <video controls>
-                            <source src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\videos\part1.mp4" type="video/mp4">
+                            <source src="part1.mp4" type="video/mp4">
                         </video>
                         <video controls>
-                            <source src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\videos\Video1.mp4" type="video/mp4">
+                            <source src="Video1.mp4" type="video/mp4">
                         </video>
                         <video controls>
-                            <source src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\videos\A00300660PhysicsProject.mp4" type="video/mp4">
+                            <source src="A00300660PhysicsProject.mp4" type="video/mp4">
                         </video>
                     </div>
                     <p>Designed and developed engaging 2D & 3D games using Unity and C#.</p>
@@ -362,17 +362,17 @@
                     <h4>Web Development</h4>
                     <div class="project-media">
                         <video controls>
-                            <source src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\videos\review.mp4" type="video/mp4">
+                            <source src="review.mp4" type="video/mp4">
                         </video>
                         <video controls>
-                            <source src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\videos\A00300660Semester2.mp4" type="video/mp4">
+                            <source src="A00300660Semester2.mp4" type="video/mp4">
                         </video>
                     </div>
                     <p>Created responsive websites.</p>
                 </div>
 
                 <div class="project-card">
-                    <img src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\images\VR.png" alt="VR Project" />
+                    <img src="VR.png" alt="VR Project" />
                     <h4>VR Application Development</h4>
                     <p>Developed immersive VR experiences using Oculus SDK and Unity.</p>
                 </div>
@@ -381,17 +381,17 @@
                     <h4>Mobile Application Development</h4>
                     <div class="project-media">
                         <video controls>
-                            <source src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\videos\screencast.mp4" type="video/mp4">
+                            <source src="screencast.mp4" type="video/mp4">
                         </video>
                         <video controls>
-                            <source src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\videos\game.mp4" type="video/mp4">
+                            <source src="game.mp4" type="video/mp4">
                         </video>
                     </div>
                     <p>Developed mobile applications.</p>
                 </div>
 
                 <div class="project-card">
-                    <img src="C:\Users\MK\Documents\GitHub\IndividualDigitalPortfolio\images\detection.png" alt="Object Detection Project" />
+                    <img src="detection.png" alt="Object Detection Project" />
                     <h4>Object Detection with Python</h4>
                     <p>Implemented object detection using Python and OpenCV methods.</p>
                 </div>
